[package]
name = "fundb"
version = "0.1.1"
authors = ["FindoraNetwork"]
edition = "2018"

[dependencies]
rand = "0.8.3"
sled = "0.34.6"
bincode = "1.3.2"
serde_json = { version = "1.0.64", features = ["raw_value"] }
serde = { version = "1.0.124", features = ["derive"] }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
lazy_static = { version = "1.4.0" }

[features]
default = []
debug_env = []
